syntax = "proto3";
package health_assessment_result;




import "resource_monitor_sdk/model/health_assessment/health_assessment_related_resource_event_score.proto";
import "resource_monitor_sdk/model/health_assessment/health_assessment_event_score_config_item.proto";

/*
GetCloselyHealthAssessmentResultByTimestamp请求
*/
message GetCloselyHealthAssessmentResultByTimestampRequest {
    /*
    资源ID
    */
    string objectId = 1 ;
    /*
    实例ID
    */
    string instanceId = 2 ;
    /*
    指定时间
    */
    int32 timestamp = 3 ;
}

/*
GetCloselyHealthAssessmentResultByTimestamp返回
*/
message GetCloselyHealthAssessmentResultByTimestampResponse {
    /*
    实例ID
    */
    string instanceId = 1 ;
    /*
    关联评分规则ID
    */
    string ruleId = 2 ;
    /*
    关联评分规则版本ID
    */
    string ruleVersionId = 3 ;
    /*
    所属模型id
    */
    string objectId = 4 ;
    /*
    事件评分
    */
    int32 eventScore = 5 ;
    /*
    关联资源评分
    */
    int32 relationScore = 6 ;
    /*
    健康评分
    */
    int32 healthScore = 7 ;
    /*
    具体关联资源事件评分（权重前）
    */
    repeated health_assessment.HealthAssessmentRelatedResourceEventScore relatedResourceEventScores = 8 ;
    /*
    事件评分权重
    */
    int32 eventScoreWeight = 9 ;
    /*
    关联资源权重
    */
    int32 relatedResourceWeight = 10 ;
    /*
    时间
    */
    int32 timestamp = 11 ;
    /*
    事件评分设置
    */
    repeated health_assessment.HealthAssessmentEventScoreConfigItem eventScoreConfig = 12 ;
}

/*
GetCloselyHealthAssessmentResultByTimestampApi返回
*/
message GetCloselyHealthAssessmentResultByTimestampResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    health_assessment_result.GetCloselyHealthAssessmentResultByTimestampResponse data = 4 ;
}

